# Synesthesie

./: CMakeLists.txt  README.md
src/: BrakeForce.cpp  BrakeForce.hpp  ConstantForce.cpp  ConstantForce.hpp  Force.cpp  Force.hpp  HookForce.cpp  HookForce.hpp  Instrument.cpp  Instrument.hpp  Leapfrog.cpp  Leapfrog.hpp  ParticleManager.cpp  ParticleManager.hpp  Polygon.cpp  Polygon.hpp  PolygonForce.cpp  PolygonForce.hpp  RepulsiveForce.cpp  RepulsiveForce.hpp  SoundManager.cpp  SoundManager.hpp  StickyForce.cpp  StickyForce.hpp  UniversalForce.cpp  UniversalForce.hpp  imgui.cpp  imguiRenderGL.cpp  main.cpp  utils.hpp
src/renderer/: ParticleRenderer2D.cpp  ParticleRenderer2D.hpp  WindowManager.cpp
src/shaders/: particle.glsl  poly.glsl  quad.glsl
